syntax = "proto3";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";


/** 账户入账请求 */
message UserWalletCarryRequest{
  // 会员编号
  sint64 userId = 1;
  // 明细标题
  string transactionTitle = 2;
  // 已扣除手续费的金额
  int64 amount = 3;
  // 手续费
  int64 transactionFee = 4;
  // 外部校译号
  string outerTransactionNo = 5;
  // 备注
  string transactionRemark = 6;
  // 是否先冻结
  bool freeze = 7;
  // 外部交易用户编号
  int64 outerTxUid = 8;
}


/** 账户预扣消费请求 */
message UserPrefreezeConsumeRequest{
  // 会员编号
  sint64 userId = 1;
  // 交易流水编号,对冻结流水进行更新时,传递该参数
  int64 transactionId = 2;
  /** 标题 */
  string transactionTitle = 3;
    // 备注
  string transactionRemark = 4;
}

/** 账户调整请求 */
message UserWalletAdjustRequest {
  /** 会员编号 */
  int64 userId = 1;
  /** 调整金额/数量 */
  int64 value = 3;
  /** 是否人工调整 */
  bool manualAdjust = 4;
  /** 关联用户 */
  int64 relateUser = 5;
  /** 备注 */
  string transactionRemark = 6;
}


/** 冻结请求 */
message UserWalletFreezeRequest {
  // 会员编号
  sint64 userId = 1;
  /** 标题 */
  string transactionTitle = 3;
  /** 冻结金额 */
  int64 amount =  4;
  // 外部交易号
  string outerTransactionNo = 5;
  // 交易流水编号,对冻结流水进行更新时,传递该参数
  int64 transactionId = 6;
  // 备注
  string transactionRemark = 7;
}



/** 解冻请求 */
message UserWalletUnfreezeRequest {
  // 会员编号
  sint64 userId = 1;
  // 交易流水号
  sint64 transactionId = 2;
  /** 标题 */
  string transactionTitle = 3;
  /** 冻结金额 */
  int64 amount =  4;
  // 外部校译号
  string outerTransactionNo = 5;
  // 备注
  string transactionRemark = 6;
  // 是否退回余额
  bool isRefundBalance = 7;
}

// 提现方式
enum EUserWithdrawalKind {
    ___WithdrawKind = 0;
    // 提现到银行卡
    WithdrawToBankCard = 1;
    // 提现到第三方账户
    WithdrawToPayWallet = 2;
     // 提现到自定义账户
     WithdrawCustom = 3;
    // 兑换为商城余额
    WithdrawByExchange = 4;
}
  
// 提现申请
message UserWithdrawRequest {
    // 会员编号
    sint64 userId = 1;
    // 提现金额
    int64 amount = 2;
    // 手续费
    int64 transactionFee = 3;
    // 提现方式,21:提现并兑换到余额  22:提现到银行卡(人工提现) 23:第三方钱包
    EUserWithdrawalKind withdrawalKind = 4;
    // 银行账号或第三方支付钱包
    string accountNo = 5;
}


// 申请提现请求
message ReviewUserWithdrawalRequest {
    // 会员编号
    int64 userId = 1;
    // 提现申请流水Id
    int64 transactionId = 2;
    // 是否通过审核
    bool pass = 3;
    // 备注
    string transactionRemark = 4;
  }
  
  // 完成提现
  message FinishUserTransactionRequest {
    // 会员编号
    int64 userId = 1;
    // 提现记录编号
    int64 transactionId = 2;
    // 汇款/交易单号
    string outerTransactionNo = 3;
  }

  
// 钱包日志
message UserWalletTxId {
  // 用户编号
  int64 userId = 1;
  // 流水号Id
  int64 txId = 2;
}

// 钱包账户日志
message UserWalletTxResponse {
  // 日志编号
  int64 txId = 1;
  // 用户编号
  int64 userId = 2;
  // 外部单号
  string outerTransactionNo = 3;
  // 业务类型
  int32 kind = 4;
  // 标题
  string transactionTitle = 5;
  // 金额
  int64 amount = 6;
  // 手续费
  int64 transactionFee = 7;
  // 状态
  int32 reviewStatus = 8;
  // 备注
  string transactionRemark =9;
  // 创建时间
  int64 createTime = 10;
  // 更新时间
  int64 updateTime = 11;
  // 关联操作人,仅在客服操作时,记录操作人
  int64 relateUser = 12;
}